# regulstock

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml  parameters_control_n_generate.yml  parameters_correspondance.yml  parameters_extraction.yml  parameters_preprocessing.yml  parameters_processing.yml
notebooks/: regule_stock.ipynb
src/regulstock/: __init__.py  __main__.py  settings.py
src/regulstock/pipelines/correspondance/: __init__.py  nodes.py  pipeline.py
src/regulstock/pipelines/extraction/: __init__.py  nodes.py  pipeline.py
src/regulstock/pipelines/preprocessing/: nodes.py  pipeline.py
src/regulstock/pipelines/processing/: __init__.py  nodes.py  old_nodes.py  pipeline.py
tests/pipelines/correspondance/: test_pipeline.py
tests/pipelines/extraction/: test_pipeline.py
tests/pipelines/processing/: test_pipeline.py
